--- a/index_en.html
+++ b/index_en.html
@@ -1,145 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PenguInnovations: For a safer penguin</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+PenguInnovations: For a safer penguin
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box;}
 
-body{
-  font-family:'Inter',sans-serif;
-  background:url("https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=1974&auto=format&fit=crop")
-  no-repeat center center fixed;
-  background-size:cover;
-  color:#111;
-}
 
-body::before{
-  content:"";
-  position:fixed;
-  inset:0;
-  background:rgba(255,255,255,0.85);
-  backdrop-filter:blur(4px);
-  z-index:-1;
-}
 
-header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:30px 10%;
-}
+Home Accessories About Us Purpose
+Innovation for Penguin Safety
+At PenguInnovations, we create innovative and safe accessories designed to protect penguins while combining science, creativity, and care for wildlife.
 
-.logo{
-  display:flex;
-  align-items:center;
-  gap:12px;
-  font-size:26px;
-  font-weight:600;
-}
-
-.logo img{
-  width:42px;
-}
-
-.flags{
-  display:flex;
-  gap:8px;
-  margin-left:15px;
-}
-
-.flags img{
-  width:24px;
-  height:16px;
-  cursor:pointer;
-  border-radius:3px;
-  border:1px solid #ccc;
-}
-
-nav a{
-  margin-left:30px;
-  text-decoration:none;
-  color:#333;
-  font-weight:500;
-}
-
-.hero{
-  display:flex;
-  align-items:center;
-  gap:40px;
-  padding:120px 10%;
-}
-
-.hero-text{
-  flex:1;
-}
-
-.hero-text h1{
-  font-size:48px;
-  margin-bottom:20px;
-}
-
-.hero-text p{
-  font-size:18px;
-  line-height:1.6;
-}
-
-.hero-image{
-  flex:1;
-}
-
-.hero-image img{
-  width:100%;
-  max-width:420px;
-  border-radius:20px;
-  display:block;
-}
-</style>
-</head>
-
-<body>
-
-<header>
-  <div class="logo">
-    <img src="logo_pinguino.png" alt="Logo">
-    PenguInnovations: For a safer penguin
-
-    <div class="flags">
-      <img src="es.png" onclick="window.location='index_es.html'" alt="Español">
-      <img src="uk.png" onclick="window.location='index_en.html'" alt="English">
-      <img src="fr.png" onclick="window.location='index_fr.html'" alt="Français">
-      <img src="de.png" onclick="window.location='index_de.html'" alt="Deutsch">
-    </div>
-  </div>
-
-  <nav>
-    <a href="index_en.html">Home</a>
-    <a href="accesorios_en.html">Accessories</a>
-    <a href="quienes_en.html">About Us</a>
-    <a href="proposito_en.html">Purpose</a>
-  </nav>
-</header>
-
-<section class="hero">
-
-  <div class="hero-text">
-    <h1>Innovation for Penguin Safety</h1>
-    <p>
-      At PenguInnovations, we create innovative and safe accessories designed
-      to protect penguins while combining science, creativity, and care for
-      wildlife.
-    </p>
-  </div>
-
-  <div class="hero-image">
-    <img src="pingüino_inicio.png" alt="Penguin innovation">
-  </div>
-
-</section>
-
-</body>
-</html>
